--- a/ad_detector.ipynb
+++ b/ad_detector.ipynb
@@ -994,7 +994,7 @@
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "mlp = MLPClassifier(alpha=10, max_iter=300)\n",
+    "mlp = MLPClassifier(alpha=10, batch_size = 1000, learning_rate_init1=0.004, max_iter=200, shaffle = true)\n",
     "\n",
     "def get_text_vector(text: str):\n",
     "    return sum(np.array([w2v_model.wv[word] if (word in w2v_model.wv) else np.zeros(1000) for word in text.split() ]))\n",
